--- a/src/components/Footer/Style.css
+++ b/src/components/Footer/Style.css
@@ -1,1 +1,81 @@
-/*# sourceMappingURL=Style.css.map */
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+:root {
+  --black-color: #252525;
+  --white-color: #fff;
+  --main-color-one: #c9af77;
+  --main-color-two: #ad8849;
+  --white-dark: rgb(238, 238, 238);
+}
+
+.footer {
+  margin: 5rem auto;
+}
+
+.black-line {
+  margin: 2rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.black-line .text {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  letter-spacing: 1px;
+  gap: 10px 0;
+}
+.black-line .text .icon-ms {
+  width: 30px;
+  height: 30px;
+}
+.black-line .import {
+  display: flex;
+  gap: 0 10px;
+  align-items: center;
+}
+.black-line .import input {
+  border: none;
+  border-bottom: 1px solid var(--black-color);
+  font-size: 1.2rem;
+  padding: 0.3rem 0.5rem;
+  font-weight: 300;
+}
+.black-line .import button {
+  border: none;
+  width: 70px;
+}
+
+.footer-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 0 30px;
+}
+.footer-side .social {
+  display: flex;
+  gap: 0 10px;
+}
+.footer-side .social li {
+  margin: 0;
+}
+.footer-side li {
+  margin: 0.8rem auto;
+}
+.footer-side li a:hover {
+  color: var(--main-color-one);
+}/*# sourceMappingURL=Style.css.map */
