--- a/src/pages/PortBaku/Style.scss
+++ b/src/pages/PortBaku/Style.scss
@@ -20,8 +20,12 @@
   --main-color-two: #ad8849;
   --white-dark: rgb(238, 238, 238);
 }
-.home-page {
-  margin-top: 10rem;
+.header-side{
+  width: 100%;
+  
+  video{
+    width: 100%;
+  }
 }
 .shop-dine {
   display: flex;
@@ -68,6 +72,7 @@
 .news-events{
   margin: 2rem auto;
   .head{
+    margin: 2rem auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,12 +80,20 @@
    .empty{
     height: 0;
     flex: 1;
-    border: 1px solid var(--black-color);
+    border: .5px solid var(--black-color);
    }
    h2{
     font-size: 1.5rem;
     font-weight: 400;
     margin: 0 1rem;
    }
+  }
+}
+.brand-side{
+  margin: 2rem auto;
+  .button{
+   display: flex;
+   justify-content: center;
+   margin: 2rem auto;
   }
 }
