--- a/src/components/Button-white/Style.css
+++ b/src/components/Button-white/Style.css
@@ -25,10 +25,12 @@
 button {
   background-color: var(--white-color);
   color: var(--black-color);
-  font-size: 1rem;
-  font-weight: 200;
   padding: 0.5rem 1rem;
   border: 1px solid var(--black-color);
+}
+button h3 {
+  font-weight: 400;
+  font-size: 1rem;
 }
 button:hover {
   background-color: var(--black-color);
