--- a/src/components/Button-white/Style.scss
+++ b/src/components/Button-white/Style.scss
@@ -19,15 +19,17 @@
   --main-color-two: #ad8849;
   --white-dark: rgb(238, 238, 238);
 }
-button{
-    background-color: var(--white-color);
-    color: var(--black-color);
+button {
+  background-color: var(--white-color);
+  color: var(--black-color);
+  padding: 0.5rem 1rem;
+  border: 1px solid var(--black-color);
+  h3 {
+    font-weight: 400;
     font-size: 1rem;
-    font-weight: 200;
-    padding: .5rem 1rem;
-    border: 1px solid var(--black-color);
-    &:hover{
-       background-color: var(--black-color);
-       color: var(--white-color);
-    }
+  }
+  &:hover {
+    background-color: var(--black-color);
+    color: var(--white-color);
+  }
 }
