--- a/src/components/Footer/Style.scss
+++ b/src/components/Footer/Style.scss
@@ -21,11 +21,12 @@
 }
 .footer {
   margin: 5rem auto;
+  position: relative;
+  bottom: 0;
 }
 .black-line {
   margin: 2rem auto;
-  // background-color: var(--black-color);
-  // color: var(--white-color);
+ 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -35,10 +36,10 @@
     width: 300px;
     letter-spacing: 1px;
     gap: 10px 0;
-    .icon-ms {
-      width: 30px;
-      height: 30px;
-    }
+    // .icon-ms {
+    //   width: 30px;
+    //   height: 30px;
+    // }
   }
   .import {
     display: flex;
