--- a/src/components/Header/Style.scss
+++ b/src/components/Header/Style.scss
@@ -27,8 +27,8 @@ a {
 .container {
   max-width: 1200px;
   max-height: 200px;
-  padding: 0 15px;
-  margin: 0 auto;
+  // padding: 0 15px;
+  // margin: 0 auto;
 }
 
 // Header
@@ -36,11 +36,11 @@ a {
   transition: 0.3s;
   position: fixed;
   top: 0;
-  height: 160px;
+  height: 130px;
   z-index: 99;
   width: 100%;
-  margin: 0.3rem auto;
-  padding: 20px 0;
+  // margin: 0.3rem auto;
+  padding: 10px 0;
   .nav {
     display: flex;
     justify-content: space-between;
