--- a/src/pages/Events/Style.scss
+++ b/src/pages/Events/Style.scss
@@ -19,7 +19,7 @@
   --main-color-two: #ad8849;
   --white-dark: rgb(238, 238, 238);
 }
-.header-events{
+.header-events {
   background-image: url(https://www.thegalleria.ae/media/images/Lifestyle_-_The_Promenade.2e16d0ba.fill-1920x885.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -31,67 +31,106 @@
   flex-direction: column;
   justify-content: center;
   margin-top: 130px;
-  h2{
+  h2 {
     letter-spacing: 1px;
     font-size: 1.5rem;
     font-weight: 500;
     color: var(--white-color);
   }
-  p{
+  p {
     letter-spacing: 2px;
     font-size: 1rem;
     font-weight: 400;
     color: var(--white-color);
   }
 }
-.actions-events{
+.header-margin{
   margin: 2rem auto;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  gap: 0 40px;
-  a{
-    font-size: 1.4rem;
-    color: var(--main-color-two);
-    padding: 1rem 1.4rem;
-  }
-  .active{
-    background-color: var(--white-dark);
-  }
 }
-.event-side{
- max-width: 1500px;
+.empty-margin{
+  width: 30%;
+}
+.test{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: .2px solid #555555;
+}
+.tab-name{
+  margin: 1rem auto;
+  color: var(--main-color-one);
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+.event-side {
+  max-width: 1500px;
   margin: 0 auto;
-  .events-card-row{
+  .events-card-row {
     // background-color: #ad8849;
     margin: 20px auto;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     gap: 0 20px;
-    .evend-side-card{
+    .evend-side-card {
       // border: 1px solid black;
       width: 43%;
       display: flex;
       flex-direction: column;
-      img{
+      img {
         width: 100%;
         filter: grayscale(100%);
         transition: filter 0.5s ease-in-out;
       }
-      h4{
+      h4 {
         font-weight: 500;
         font-size: 1.5rem;
         color: var(--black-color);
         letter-spacing: 1px;
         margin: 1rem 0;
       }
-p{
-  font-weight: 400;
-  letter-spacing: 1px;
-  color: var(--black-color);
+      p {
+        font-weight: 400;
+        letter-spacing: 1px;
+        color: var(--black-color);
+      }
+      &:hover {
+        img {
+          filter: grayscale(0%);
+        }
+      }
+    }
+  }
 }
-      &:hover{
-        img{
+.news-side{
+  &-row{
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    gap: 0 20px;
+    .news-side-card{
+      width: 43%;
+      display: flex;
+      flex-direction: column;
+      img {
+        width: 100%;
+        filter: grayscale(100%);
+        transition: filter 0.5s ease-in-out;
+      }
+      h4 {
+        font-weight: 500;
+        font-size: 1.5rem;
+        color: var(--black-color);
+        letter-spacing: 1px;
+        margin: 1rem 0;
+      }
+      p {
+        font-weight: 400;
+        letter-spacing: 1px;
+        color: var(--black-color);
+      }
+      &:hover {
+        img {
           filter: grayscale(0%);
         }
       }
