--- a/src/pages/Events/Style.css
+++ b/src/pages/Events/Style.css
@@ -48,20 +48,27 @@
   color: var(--white-color);
 }
 
-.actions-events {
+.header-margin {
   margin: 2rem auto;
-  width: 100%;
+}
+
+.empty-margin {
+  width: 30%;
+}
+
+.test {
   display: flex;
+  align-items: center;
   justify-content: center;
-  gap: 0 40px;
+  border-bottom: 0.2px solid #555555;
 }
-.actions-events a {
-  font-size: 1.4rem;
-  color: var(--main-color-two);
-  padding: 1rem 1.4rem;
-}
-.actions-events .active {
-  background-color: var(--white-dark);
+
+.tab-name {
+  margin: 1rem auto;
+  color: var(--main-color-one);
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
 .event-side {
@@ -97,5 +104,37 @@
   color: var(--black-color);
 }
 .event-side .events-card-row .evend-side-card:hover img {
+  filter: grayscale(0%);
+}
+
+.news-side-row {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  gap: 0 20px;
+}
+.news-side-row .news-side-card {
+  width: 43%;
+  display: flex;
+  flex-direction: column;
+}
+.news-side-row .news-side-card img {
+  width: 100%;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease-in-out;
+}
+.news-side-row .news-side-card h4 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: var(--black-color);
+  letter-spacing: 1px;
+  margin: 1rem 0;
+}
+.news-side-row .news-side-card p {
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--black-color);
+}
+.news-side-row .news-side-card:hover img {
   filter: grayscale(0%);
 }/*# sourceMappingURL=Style.css.map */
