--- a/src/pages/Contact/Style.scss
+++ b/src/pages/Contact/Style.scss
@@ -20,3 +20,44 @@
   --main-color-two: #ad8849;
   --white-dark: rgb(238, 238, 238);
 }
+.contact-header{
+  margin-top: 130px;
+  background-image: url(https://portbakumall.az/images/banner1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  h2{
+    font-size: 2.5rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: var(--white-color);
+  }
+}
+.location-top{
+
+  h2{
+    margin: 2rem 0;
+    font-size: 1.4rem;
+    width: 500px;
+    text-align: start;
+    padding: 0 3rem;
+    span{
+      font-size: 1.2rem;
+      padding: 0 .6rem;
+      color: var(--main-color-two);
+    }
+  }
+}
+
+.location-side{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+
