--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,402 @@
-.App {
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+:root {
+  --black-color: #252525;
+  --white-color: #fff;
+  --main-color-one: #c9af77;
+  --main-color-two: #ad8849;
+  --white-dark: rgb(238, 238, 238);
+}
+
+.header-side {
+  width: 100%;
+}
+.header-side video {
+  width: 100%;
+}
+
+.shop-dine {
+  display: flex;
+  width: 100%;
+  height: 400px;
+}
+.shop-dine .shop-side {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  flex-basis: 50%;
+  background-image: url(https://portbakumall.az/resized/fit960x570/center/pages/1/banner3.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.shop-dine .shop-side a h3 {
+  margin: 0 1rem;
+  color: var(--white-color);
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.shop-dine .dine-side {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex: 1;
+  background-image: url(https://portbakumall.az/resized/fit960x570/center/pages/1/banner2.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.shop-dine .dine-side a h3 {
+  margin: 0 1rem;
+  color: var(--white-color);
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+
+.news-events {
+  margin: 2rem auto;
+}
+.news-events .head {
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.news-events .head .empty {
+  height: 0;
+  flex: 1;
+  border: 0.5px solid var(--black-color);
+}
+.news-events .head h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0 1rem;
+}
+
+.brand-side {
+  margin: 2rem auto;
+}
+.brand-side .head h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin: 0 1rem;
+}
+.brand-side .button {
+  display: flex;
+  justify-content: center;
+  margin: 2rem auto;
+}
+
+.top-side {
+  margin-top: 130px;
+  background-image: url(https://portbakumall.az/resized/fit1920x400/center/pages/57/dine-cover.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.top-side h2 {
+  color: var(--white-color);
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-align: center;
+  margin: 0.7rem auto;
+}
+.top-side p {
+  color: var(--white-color);
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0 20px;
+  margin: 2rem auto;
+}
+.brand .box {
+  border: 1px solid var(--black-color);
+  width: 600px;
+  height: 0;
+}
+.brand h2 {
+  font-size: 1.7rem;
+  font-weight: 300;
+}
+
+.dining-cards .dining-row {
+  display: flex;
+  gap: 0 2rem;
+  margin: 2rem 0;
+}
+
+.button-side {
+  display: flex;
+  justify-content: center;
+}
+
+.shop-head {
+  margin-top: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  background-image: url(https://portbakumall.az/resized/fit1920x400/center/pages/50/brands-cover.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: var(--white-color);
+}
+.shop-head h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.shop-head p {
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 2px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bodyo {
+  margin-top: 6rem;
+  padding: 6rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ranking {
+  width: 30%;
+  align-items: center;
+  border: 1px solid var(--main-color-two);
+  padding: 1.1rem 0.8rem;
+  font-size: 1.1rem;
+  margin: 2rem 0 1rem 2rem;
+  font-weight: 600;
+}
+.ranking:focus {
+  border: 1px solid var(--main-color-one);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.brands-side {
+  width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.brands-side .center-side {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.brands-side h2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.brands-side p {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.header-events {
+  background-image: url(https://www.thegalleria.ae/media/images/Lifestyle_-_The_Promenade.2e16d0ba.fill-1920x885.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  align-items: center;
   flex-direction: column;
+  justify-content: center;
+  margin-top: 130px;
+}
+.header-events h2 {
+  letter-spacing: 1px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--white-color);
+}
+.header-events p {
+  letter-spacing: 2px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--white-color);
+}
+
+.header-margin {
+  margin: 2rem auto;
+}
+
+.empty-margin {
+  width: 30%;
+}
+
+.test {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom: 0.2px solid #555555;
 }
 
-.App-link {
-  color: #61dafb;
+.tab-name {
+  margin: 1rem auto;
+  color: var(--main-color-one);
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.event-side {
+  max-width: 1500px;
+  margin: 0 auto;
 }
+.event-side .events-card-row {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  gap: 0 20px;
+}
+.event-side .events-card-row .evend-side-card {
+  width: 43%;
+  display: flex;
+  flex-direction: column;
+}
+.event-side .events-card-row .evend-side-card img {
+  width: 100%;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease-in-out;
+}
+.event-side .events-card-row .evend-side-card h4 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: var(--black-color);
+  letter-spacing: 1px;
+  margin: 1rem 0;
+}
+.event-side .events-card-row .evend-side-card p {
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--black-color);
+}
+.event-side .events-card-row .evend-side-card:hover img {
+  filter: grayscale(0%);
+}
+
+.news-side-row {
+  margin: 20px auto;
+  display: flex;
+  justify-content: center;
+  gap: 0 20px;
+}
+.news-side-row .news-side-card {
+  width: 43%;
+  display: flex;
+  flex-direction: column;
+}
+.news-side-row .news-side-card img {
+  width: 100%;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease-in-out;
+}
+.news-side-row .news-side-card h4 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: var(--black-color);
+  letter-spacing: 1px;
+  margin: 1rem 0;
+}
+.news-side-row .news-side-card p {
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--black-color);
+}
+.news-side-row .news-side-card:hover img {
+  filter: grayscale(0%);
+}
+
+.contact-header {
+  margin-top: 130px;
+  background-image: url(https://portbakumall.az/images/banner1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+}
+.contact-header h2 {
+  font-size: 2.5rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: var(--white-color);
+}
+
+.location-top h2 {
+  margin: 2rem 0;
+  font-size: 1.4rem;
+  width: 500px;
+  text-align: start;
+  padding: 0 3rem;
+}
+.location-top h2 span {
+  font-size: 1.2rem;
+  padding: 0 0.6rem;
+  color: var(--main-color-two);
+}
+
+.location-side {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+form .form-side {
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
+  margin: 0 30px;
+}
+form .form-side input {
+  width: 250px;
+}
+form .form-left-side {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+}
+form .form-right-side {
+  display: flex;
+  flex-direction: column;
+  gap: 20px 0;
+}/*# sourceMappingURL=App.css.map */
